Convert to Jekyll

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ img#header-barcode {
       background: #000;
       color: #fff;
       text-decoration: none;
-      padding: 0 0.25em;
+      padding: 0.15em 0.3em;
     }
 
       #menu li a:hover, #menu li a:focus {
