--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <link href="style.css" media="screen" rel="stylesheet" type="text/css" />
   </head>
   <body>
-  
+
     <h1 id="header">Barby</h1>
     <p id="header-copy">
       <strong>Bar</strong>codes for Ru<strong>by</strong>
@@ -29,7 +29,7 @@
     {{ content }}
 
     <p id="footer">
-      <a href="http://tore.darell.no/">I</a> made this.
+      <a href="http://toreto.re/">I</a> made this.
     </p>
 
   </body>
